Created 2 new traits from Burns
Burns has 2 different effects, visual and damage over time.

This commit creates 2 new traits that each have one of these effects.

--- a/OpenRA.Mods.Common/OpenRA.Mods.Common.csproj
+++ b/OpenRA.Mods.Common/OpenRA.Mods.Common.csproj
@@ -290,6 +290,8 @@
     <Compile Include="Traits\Buildings\RepairableBuilding.cs" />
     <Compile Include="Traits\Buildings\RepairsUnits.cs" />
     <Compile Include="Traits\Buildings\Reservable.cs" />
+    <Compile Include="Traits\DamageOverTime.cs" />
+    <Compile Include="Traits\BurnsVisualOnly.cs" />
     <Compile Include="Traits\Burns.cs" />
     <Compile Include="Traits\ChangesTerrain.cs" />
     <Compile Include="Traits\Health.cs" />
